--- a/app/src/main/res/layout/weather_info.xml
+++ b/app/src/main/res/layout/weather_info.xml
@@ -54,4 +54,57 @@
             android:src="@drawable/base_action_bar_action_city"/>
     </RelativeLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/title"
+        android:background="@drawable/biz_plugin_weather_shenzhen_bg"
+        android:orientation="vertical">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/weather_today"
+            android:padding="10.0dip">
+            <!--城市名称-->
+            <TextView
+                android:id="@+id/city"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="15.0dip"
+                android:singleLine="true"
+                android:text="北京"
+                android:textColor="@android:color/white"
+                android:textSize="40.0sp"/>
+            <!--发布时间-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/time"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/city"
+                android:layout_marginLeft="15.0dip"
+                android:layout_marginTop="5dip"
+                android:singleLine="true"
+                android:text="今天18:25发布"
+                android:textColor="@android:color/white"
+                android:textSize="15.0sp"/>
+            <!--湿度信息-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/humidity"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/time"
+                android:layout_marginLeft="15.0dip"
+                android:singleLine="true"
+                android:text="湿度:57%"
+                android:textColor="@android:color/white"
+                android:textSize="15.0sp"/>
+            
+        </RelativeLayout>
+    </LinearLayout>
+
+
 </RelativeLayout>
