--- a/app/src/main/res/layout/select_city.xml
+++ b/app/src/main/res/layout/select_city.xml
@@ -35,15 +35,36 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:id="@+id/search_bar"
+        android:layout_below="@+id/title_top"
+        android:layout_margin="4dip">
+        <EditText
+            android:gravity="center_vertical"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:drawableLeft="@drawable/magnifying_glass"
+            android:drawablePadding="6dip"
+            android:singleLine="true"
+            android:background="@drawable/contact_search_box_edittext_keyword_background"
+            android:hint="输入城市"
+            android:textSize="16dip"
+            >
+
+        </EditText>
+
+
+    </RelativeLayout>
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/title_top">
+        android:layout_below="@id/search_bar">
 
         <ListView
             android:id="@+id/city_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             >
 
         </ListView>
