--- a/app/src/main/res/layout/select_city.xml
+++ b/app/src/main/res/layout/select_city.xml
@@ -35,31 +35,35 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_height="wrap_content"
+        android:id="@+id/title_mid"
         android:layout_width="match_parent"
-        android:id="@+id/search_bar"
-        android:layout_below="@+id/title_top"
-        android:layout_margin="4dip">
-        <EditText
-            android:gravity="center_vertical"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:drawableLeft="@drawable/magnifying_glass"
-            android:drawablePadding="6dip"
-            android:singleLine="true"
-            android:background="@drawable/contact_search_box_edittext_keyword_background"
-            android:hint="输入城市"
-            android:textSize="16dip"
-            >
+        android:layout_height="wrap_content"
+        android:layout_below="@id/title_top">
 
-        </EditText>
+        <com.pku.edu.ChenGuoqiang.util.ClearEditText
+            android:id="@+id/search_bar"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:hint="搜索全国城市（中文）"
+            android:layout_margin="10dip"
+            android:drawableLeft="@drawable/magnifying_glass"
+            android:drawablePadding="8.0dip"
+            android:paddingBottom="8.0dip"
+            android:paddingLeft="10.0dip"
+            android:paddingRight="30.0dip"
+            android:paddingTop="8.0dip"
+            android:singleLine="true"
+            android:textColor="#ff000000"
+            android:textColorHint="#ffcccccc"
+            android:textSize="15.0sp"
+            android:background="@drawable/contact_search_box_edittext_keyword_background"/>
 
 
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/search_bar">
+        android:layout_below="@id/title_mid">
 
         <ListView
             android:id="@+id/city_list"
