--- a/app/src/main/res/layout/page1.xml
+++ b/app/src/main/res/layout/page1.xml
@@ -56,6 +56,7 @@
             android:textColor="@android:color/white"
             android:textSize="20.0sp" />
 
-
+    </RelativeLayout>
 
 </RelativeLayout>
+
