--- a/app/src/main/res/layout/page1.xml
+++ b/app/src/main/res/layout/page1.xml
@@ -3,58 +3,125 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#000"
     >
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/tomorrow"
         android:layout_alignParentLeft="true"
         android:layout_centerInParent="true"
-        android:layout_marginTop="5.0dip">
+        android:layout_marginLeft="50dip">
 
         <ImageView
             android:id="@+id/weather_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_below="@+id/climate"
             android:src="@drawable/biz_plugin_weather_qing" />
 
         <TextView
-            android:id="@+id/week_today"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="5dip"
-            android:layout_toRightOf="@id/weather_img"
+            android:layout_height="30dip"
             android:singleLine="true"
-            android:text="今天 星期三"
+            android:id="@+id/date"
+            android:text="11月11日"
             android:textColor="@android:color/white"
-            android:textSize="20sp" />
+            android:textSize="25sp"/>
 
         <TextView
             android:id="@+id/temperature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/week_today"
+            android:layout_below="@id/date"
             android:layout_marginLeft="5dip"
-            android:layout_toRightOf="@id/weather_img"
             android:singleLine="true"
             android:text="-2℃~7℃"
             android:textColor="@android:color/white"
             android:textSize="30.0sp" />
 
         <TextView
+            android:id="@+id/fengxiang"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dip"
+            android:singleLine="true"
+            android:layout_below="@id/temperature"
+            android:text="东南风"
+            android:textColor="@android:color/white"
+            android:textSize="25sp" />
+
+        <TextView
             android:id="@+id/climate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/temperature"
+            android:layout_below="@id/fengxiang"
             android:layout_marginLeft="5dip"
-            android:layout_toRightOf="@id/weather_img"
             android:singleLine="true"
             android:text="多云转晴"
             android:textColor="@android:color/white"
-            android:textSize="20.0sp" />
+            android:textSize="30.0sp" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tomorrow2"
+        android:layout_alignParentRight="true"
+        android:layout_centerInParent="true"
+        android:layout_marginRight="50dip">
+
+        <ImageView
+            android:id="@+id/weather_img2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/climate2"
+            android:src="@drawable/biz_plugin_weather_qing" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="30dip"
+            android:singleLine="true"
+            android:id="@+id/date2"
+            android:text="11月11日"
+            android:textColor="@android:color/white"
+            android:textSize="25sp"/>
+
+        <TextView
+            android:id="@+id/temperature2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/date2"
+            android:layout_marginLeft="5dip"
+            android:singleLine="true"
+            android:text="-2℃~7℃"
+            android:textColor="@android:color/white"
+            android:textSize="30.0sp" />
+
+        <TextView
+            android:id="@+id/fengxiang2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dip"
+            android:singleLine="true"
+            android:layout_below="@id/temperature2"
+            android:text="东南风"
+            android:textColor="@android:color/white"
+            android:textSize="25sp" />
+
+        <TextView
+            android:id="@+id/climate2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fengxiang2"
+            android:layout_marginLeft="5dip"
+            android:singleLine="true"
+            android:text="多云转晴"
+            android:textColor="@android:color/white"
+            android:textSize="30.0sp" />
 
     </RelativeLayout>
 
