--- a/app/src/main/res/layout/page1.xml
+++ b/app/src/main/res/layout/page1.xml
@@ -8,33 +8,33 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tomorrow"
+        android:id="@+id/tomorrow1"
         android:layout_alignParentLeft="true"
         android:layout_centerInParent="true"
         android:layout_marginLeft="50dip">
 
         <ImageView
-            android:id="@+id/weather_img"
+            android:id="@+id/weather_img1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/climate"
+            android:layout_below="@+id/climate1"
             android:src="@drawable/biz_plugin_weather_qing" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="30dip"
             android:singleLine="true"
-            android:id="@+id/date"
+            android:id="@+id/date1"
             android:text="11月11日"
             android:textColor="@android:color/white"
             android:textSize="25sp"/>
 
         <TextView
-            android:id="@+id/temperature"
+            android:id="@+id/temperature1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/date"
+            android:layout_below="@id/date1"
             android:layout_marginLeft="5dip"
             android:singleLine="true"
             android:text="-2℃~7℃"
@@ -42,21 +42,21 @@
             android:textSize="30.0sp" />
 
         <TextView
-            android:id="@+id/fengxiang"
+            android:id="@+id/fengxiang1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dip"
             android:singleLine="true"
-            android:layout_below="@id/temperature"
+            android:layout_below="@id/temperature1"
             android:text="东南风"
             android:textColor="@android:color/white"
             android:textSize="25sp" />
 
         <TextView
-            android:id="@+id/climate"
+            android:id="@+id/climate1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/fengxiang"
+            android:layout_below="@id/fengxiang1"
             android:layout_marginLeft="5dip"
             android:singleLine="true"
             android:text="多云转晴"
