最终版本——下拉刷新、二级列表、动态城市搜索、未来天气

--- a/app/src/main/res/layout/item_first.xml
+++ b/app/src/main/res/layout/item_first.xml
@@ -5,16 +5,17 @@
 
     <ImageView
         android:layout_width="30dip"
-        android:layout_height="30dip"
+        android:layout_height="60dip"
         android:id="@+id/province_icon"
         />
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="30dip"
+        android:layout_height="60dip"
         android:id="@+id/first_group"
         android:gravity="center"
         android:text="first group"
+        android:textSize="20dip"
         />
 
 
