--- a/app/src/main/res/layout/item_second.xml
+++ b/app/src/main/res/layout/item_second.xml
@@ -5,10 +5,11 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dip"
         android:id="@+id/second_group"
-        android:paddingLeft="60dip"
+        android:paddingLeft="45dip"
         android:text="second group"
+        android:textSize="20dip"
         />
 
 </LinearLayout>
