--- a/app/src/main/res/layout/item_first.xml
+++ b/app/src/main/res/layout/item_first.xml
@@ -4,14 +4,17 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_width="30dip"
-        android:layout_height="60dip"
+        android:layout_width="50dip"
+        android:layout_height="50dip"
+        android:layout_marginLeft="50dip"
+        android:layout_gravity="center_vertical"
         android:id="@+id/province_icon"
         />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="60dip"
+        android:layout_marginLeft="15dip"
         android:id="@+id/first_group"
         android:gravity="center"
         android:text="first group"
