--- a/app/src/main/res/layout/weather_info.xml
+++ b/app/src/main/res/layout/weather_info.xml
@@ -74,6 +74,7 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
+            android:id="@+id/backgroundImg"
             android:background="@drawable/biz_plugin_weather_shenzhen_bg"
             android:orientation="vertical">
 
